# programming-in-haskell

./: .gitignore  README.md  programming-in-haskell.cabal
app/: Main.hs
src/: Chapter01.hs  Chapter02.hs  Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  MyLib.hs
src/Chapter02/: test.hs
src/Chapter05/: Caesar.hs  Exercises.hs
src/Chapter06/: Exercises.hs  RejectNegative.hs
src/Chapter07/: BinaryStringTransmitter.hs  Exercises.hs  Voting.hs
src/Chapter08/: Exercises.hs
src/Chapter08/Part04/: Tree0.hs  Tree1.hs  Tree2.hs  Tree3.hs  Tree4.hs  Trees.hs
src/Chapter08/Part06/: GenBools.hs  MyGenBools.hs  TautologyChecker.hs
src/Chapter08/Part07/: AbstractMachine.hs  AbstractMachine.java  abstract_machine.ml  dune
src/Chapter09/: Countdown.hs
src/Chapter10/: Exercise.hs  Hangman.hs  Lesson.hs  Life.hs  Nim.hs  ex.ml
src/Chapter11/: TicTacToe.hs  tic_tac_toe.ml
src/Chapter12/: Exercises.hs  Lesson.hs  StateMonad.hs
src/Chapter13/: Calculator.hs  Exercise7.hs  Exercise8.hs  Lesson.hs
src/Chapter14/: Lesson.hs
