cabal-version:      2.4
name:               programming-in-haskell
version:            0.1.0.0

extra-source-files:
    README.md

library
    exposed-modules:
          MyLib
        , Chapter01
        , Chapter02
        , Chapter03
        , Chapter04
        , Chapter05
        , Chapter05.Caesar
        , Chapter05.Exercises

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17
    hs-source-dirs:   src
    default-language: Haskell2010

executable programming-in-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17
      , programming-in-haskell

    hs-source-dirs:   app
    default-language: Haskell2010
