cabal-version: 2.4
name: programming-in-haskell
version: 0.1.0.0

common ghc-options
  ghc-options: -Wall

library
  import: ghc-options
  exposed-modules:
    Chapter01
    Chapter02
    Chapter03
    Chapter04
    Chapter05
    Chapter05.Caesar
    Chapter05.Exercises
    Chapter06
    Chapter06.Exercises
    Chapter06.RejectNegative
    Chapter07
    Chapter07.BinaryStringTransmitter
    Chapter07.Exercises
    Chapter07.Voting
    Chapter08
    Chapter08.Part04.Tree0
    Chapter08.Part04.Tree1
    Chapter08.Part04.Tree2
    Chapter08.Part04.Tree3
    Chapter08.Part04.Tree4
    Chapter08.Part04.Trees
    Chapter08.Part06.GenBools
    Chapter08.Part06.MyGenBools
    Chapter08.Part06.TautologyChecker
    Chapter08.Part07.AbstractMachine
    Chapter09.Countdown
    Chapter12.Exercises
    Chapter13.Calculator
    Chapter13.Exercise7
    Chapter13.Exercise8
    Chapter13.Lesson
    MyLib

  -- Modules included in this library but not exported.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base ^>=4.18,
    process,

  hs-source-dirs: src
  default-language: Haskell2010

executable programming-in-haskell
  main-is: Main.hs
  -- Modules included in this executable, other than Main.
  -- other-modules:
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    base ^>=4.18,
    programming-in-haskell,

  hs-source-dirs: app
  default-language: Haskell2010
